--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: Introduction To Docs
-description: "Welcome to the home of your new documentation"
+title: Plai Ads API
+description: "Plai Ads API Introduction"
 ---
 
 <img
@@ -14,58 +14,20 @@ description: "Welcome to the home of your new documentation"
 	alt="Hero Dark"
 />
 
-## Setting up
+## What is Plai ?
 
-The first step to world-class documentation is setting up your editing environments.
+Plai makes it easy for you to plan your marketing campaigns, find insights in your analytics, and act on your insights with targeted ads. Difficult tasks like bidding, remarketing, match types, A/B testing and more are all done for you without you having to lift a finger.
 
-<CardGroup cols={2}>
-	<Card
-		title="Edit Your Docs"
-		icon="pen-to-square"
-		href="https://mintlify.com/docs/quickstart"
-	>
-		Get your docs set up locally for easy development
-	</Card>
-	<Card
-		title="Preview Changes"
-		icon="image"
-		href="https://mintlify.com/docs/development"
-	>
-		Preview your changes before you push to make sure they're perfect
-	</Card>
-</CardGroup>
+## Why do businesses use Plai?
 
-## Make it yours
+Plai doesn't just make marketing easy, it makes it better. Digital marketing is always changing, that's why we regularly update Plai to include the latest best practices to keep you a step ahead without you having to spend hours learning the latest tactics.
 
-Update your docs to your brand and add valuable content for the best user conversion.
+## Which Social Networks Are Supported?
 
-<CardGroup cols={2}>
-	<Card
-		title="Customize Style"
-		icon="palette"
-		href="https://mintlify.com/docs/settings/global"
-	>
-		Customize your docs to your company's colors and brands
-	</Card>
-	<Card
-		title="Reference APIs"
-		icon="code"
-		href="https://mintlify.com/docs/api-playground/openapi"
-	>
-		Automatically generate endpoints from an OpenAPI spec
-	</Card>
-	<Card
-		title="Add Components"
-		icon="screwdriver-wrench"
-		href="https://mintlify.com/docs/content/components/accordions"
-	>
-		Build interactive features and designs to guide your users
-	</Card>
-	<Card
-		title="Get Inspiration"
-		icon="stars"
-		href="https://mintlify.com/customers"
-	>
-		Check out our showcase of our favorite documentation
+For now only facebook is Supported in Apis
+
+<CardGroup cols={1}>
+	<Card title="Facebook" icon="facebook" href="#">
+		Facebook Apis
 	</Card>
 </CardGroup>
