--- a/api-reference/endpoint/auth/create_advert.mdx
+++ b/api-reference/endpoint/auth/create_advert.mdx
@@ -4,7 +4,7 @@ api: "POST /auth/create_advert_generator_link"
 description: "This endpoint generates a link that allows users to seamlessly connect their Facebook and Instagram accounts for the purpose of creating advertisements. By connecting these accounts, users can manage and launch campaigns across both platforms from a unified interface. This integration streamlines the process of advertisement creation and management, ensuring a smooth experience for users looking to run cross-platform ads."
 ---
 
-## Body Parameters
+## Request Body
 
 <ParamField body="userId" type="string" required>
 	User Id
