--- a/api-reference/endpoint/auth/create_user.mdx
+++ b/api-reference/endpoint/auth/create_user.mdx
@@ -4,7 +4,7 @@ api: "POST /auth/create_user"
 description: "This endpoint allows the creation of a new user account on our platform. By providing the necessary user information, you can onboard new users into the system, enabling them to access and utilize platform features and services."
 ---
 
-## Body Parameters
+## Request Body
 
 <ParamField body="email" type="string" required>
 	Customers Email Address
