--- a/api-reference/endpoint/auth/get_connected_accounts.mdx
+++ b/api-reference/endpoint/auth/get_connected_accounts.mdx
@@ -4,7 +4,7 @@ api: "POST /auth/get_connected_accounts_data"
 description: "This endpoint allows you to retrieve a list of social accounts (e.g., Facebook, Instagram, etc.) that are connected to a user's profile on our platform. By specifying the user's unique ID, you can access information about the social accounts they have linked, enabling you to manage or interact with these accounts for further operations, such as advertising or analytics."
 ---
 
-## Body Parameters
+## Request Body
 
 <ParamField body="userId" type="string" required>
 	User Id
