--- a/introduction.mdx
+++ b/introduction.mdx
@@ -26,8 +26,33 @@ Plai doesn't just make marketing easy, it makes it better. Digital marketing is 
 
 For now only facebook is Supported in Apis
 
-<CardGroup cols={1}>
-	<Card title="Facebook" icon="facebook" href="#">
+<CardGroup cols={3}>
+	<Card
+		title="Facebook"
+		icon="facebook"
+		href="api-reference/endpoint/meta/check_leadform_tos"
+	>
 		Facebook Apis
+	</Card>
+	<Card title="Google Apis" icon="google" color="#adadad">
+		Comming Soon
+	</Card>
+	<Card title="Linkedin Apis" icon="linkedin" color="#adadad">
+		Comming Soon
+	</Card>
+	<Card title="Tiktok Apis" icon="tiktok" color="#adadad">
+		Comming Soon
+	</Card>
+	<Card title="Youtube Apis" icon="youtube" color="#adadad">
+		Comming Soon
+	</Card>
+	<Card title="Instagram Apis" icon="instagram" color="#adadad">
+		Comming Soon
+	</Card>
+	<Card title="Spotify Apis" icon="spotify" color="#adadad">
+		Comming Soon
+	</Card>
+	<Card title="Snapchat Apis" icon="snapchat" color="#adadad">
+		Comming Soon
 	</Card>
 </CardGroup>
