--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -3,9 +3,17 @@ title: "Quick Start Guide"
 description: "Start building your own ads platform, using plai ads apis"
 ---
 
-## Get Your API Key
+## Get Your API Key From Plai
 
-To use our Ads API services, you must first obtain an API Key and an authorization token. Please contact our support team to request access. Once approved, you'll receive the necessary credentials to authenticate your requests and interact with our advertising endpoints securely.
+An API Key is required to authorize access to the API endpoints. This key is used in the header of your requests, and should be preceded by the Bearer keyword.
+
+Get Api key, Click on Dashboard on top right corner than on whitelabel navigate to profile screen > developer center tab
+
+![title](/images/key.png)
+
+## Get Your API Key From Customer Support
+
+To use our Ads API services, you must first obtain an API Key. Please contact our support team to request access. Once approved, you'll receive the necessary credentials to authenticate your requests and interact with our advertising endpoints securely.
 
 ### Contact Support
 
