--- a/api-reference/endpoint/auth/create_user.mdx
+++ b/api-reference/endpoint/auth/create_user.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Create New User"
+title: "Create User Profile"
 api: "POST /auth/create_user"
-description: "This endpoint allows the creation of a new user account on our platform. By providing the necessary user information, you can onboard new users into the system, enabling them to access and utilize platform features and services."
+description: "This endpoint allows the creation of a new user profile on our platform. By providing the necessary user information, you can onboard new users into the system, enabling them to access and utilize platform features and services."
 ---
 
 ## Request Body
