--- a/introduction.mdx
+++ b/introduction.mdx
@@ -22,17 +22,17 @@ Plai makes it easy for you to plan your marketing campaigns, find insights in yo
 
 Plai doesn't just make marketing easy, it makes it better. Digital marketing is always changing, that's why we regularly update Plai to include the latest best practices to keep you a step ahead without you having to spend hours learning the latest tactics.
 
-## Which Social Networks Are Supported?
+## Which Ads Channels Are Supported?
 
-For now only facebook is Supported in Apis
+For now only meta ads is Supported in Apis
 
 <CardGroup cols={3}>
 	<Card
-		title="Facebook"
-		icon="facebook"
+		title="Meta"
+		icon="meta"
 		href="api-reference/endpoint/meta/check_leadform_tos"
 	>
-		Facebook Apis
+		Meta Apis
 	</Card>
 	<Card title="Google Apis" icon="google" color="#adadad">
 		Comming Soon
