add plai theme logo colors

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,16 +3,7 @@ title: Plai Ads API
 description: "Plai Ads API Introduction"
 ---
 
-<img
-	className="block dark:hidden"
-	src="/images/hero-light.png"
-	alt="Hero Light"
-/>
-<img
-	className="hidden dark:block"
-	src="/images/hero-dark.png"
-	alt="Hero Dark"
-/>
+<img className="block" src="/images/main_image.png" alt="Hero Light" />
 
 ## What is Plai ?
 
