add auth overview

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -5,7 +5,7 @@ description: "Start building your own ads platform, using plai ads apis"
 
 ## Get Your API Key From Plai
 
-An API Key is required to authorize access to the API endpoints. This key is used in the header of your requests, and should be preceded by the Bearer keyword.
+An API Key is required to authorize access to the API endpoints. This key is used in the header of your requests, and should be preceded by the x-api-key keyword.
 
 Get Api key, Click on Dashboard on top right corner than on whitelabel navigate to profile screen > developer center tab
 
