--- a/api-reference/endpoint/auth/create_advert.mdx
+++ b/api-reference/endpoint/auth/create_advert.mdx
@@ -12,6 +12,9 @@ description: "This endpoint generates a link that allows users to seamlessly con
 <ParamField body="platform" type="string" initialValue="FACEBOOK" required>
 	Social Platform Key
 </ParamField>
+<ParamField body="redirectUri" type="url" required>
+	Redirect Url to redirect after connecting accounts
+</ParamField>
 
 ## Response
 
