--- a/api-reference/endpoint/meta/create_lookalike_audience.mdx
+++ b/api-reference/endpoint/meta/create_lookalike_audience.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Create Lookalike Audience"
-api: "POST /meta/get_custom_audiences"
+api: "POST /meta/create_lookalike_audience"
 description: "This endpoint allows you to create a Lookalike Audience based on an existing custom audience. A Lookalike Audience helps you reach new people who are similar to your existing customers, improving the chances of ad engagement and conversion."
 ---
 
@@ -13,7 +13,14 @@ description: "This endpoint allows you to create a Lookalike Audience based on a
 	Pagination (PAGE | AUDIENCE)
 </ParamField>
 <ParamField body="sourceId" type="string" required>
-	Source Id
+	<Info>
+		If source is `PAGE`, you must include the page id parameter. This should be the Facebook Page ID from which the audience will be created.
+	</Info>
+
+    <Info>
+    If source is `AUDIENCE`, you must include the audience id parameter. This should be the Custom Audience ID that will be used.
+    </Info>
+
 </ParamField>
 <ParamField body="audienceName" type="string" required>
 	Audience Name
