add linkedin api

--- a/api-reference/endpoint/meta/create_fb_csv_audience.mdx
+++ b/api-reference/endpoint/meta/create_fb_csv_audience.mdx
@@ -16,7 +16,8 @@ contentType: multipart/form-data
 	User Id
 </ParamField>
 <ParamField body="audienceName" type="string" required>
-	Media Type
+	The name of the audience you are creating. This name will be displayed in
+	your Facebook Ads account.
 </ParamField>
 <ParamField body="csvFile" type="file" required>
 
@@ -27,7 +28,6 @@ contentType: multipart/form-data
     >
         Sample CSV
     </Card>
-
 
     <Note>
         Make sure to follow csv guidelines from https://www.facebook.com/business/help/2082575038703844?id=2469097953376494
