--- a/api-reference/endpoint/auth/auth_overview.mdx
+++ b/api-reference/endpoint/auth/auth_overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Authentication Overview"
-description: "Learn how to connect your social accounts (Facebook, Linkedin, etc.) to our platform for quick and secure access. This page covers supported providers and the simple steps to link your account."
+description: "Learn how to connect your ads accounts (Facebook, Linkedin, etc.) to our platform for quick and secure access. This page covers supported providers and the simple steps to link your account."
 ---
 
 ### Connect Facebook or Linkedin Account
@@ -16,8 +16,7 @@ description: "Learn how to connect your social accounts (Facebook, Linkedin, etc
 
         <Card title="Click to Generate Link" icon="link" href="/api-reference/endpoint/auth/create_advert" horizontal />
 
-        To connect a social account, set the platform parameter accordingly:
-
+        To connect a ads account, set the platform parameter accordingly:
 
         - For Facebook or Instagram, set `platform = FACEBOOK`. This will allow you to connect your Facebook Page, Instagram Page, or Ads Account to our platform.
 
