--- a/api-reference/endpoint/linkedin/linkedin_overview.mdx
+++ b/api-reference/endpoint/linkedin/linkedin_overview.mdx
@@ -13,7 +13,8 @@ Use the following endpoints to interact with various audience sources:
 Use the card below to explore the endpoint:
 
 <Card
-	title="Create LinkedIn Audience from CSV"
-	description="Upload a CSV file to create a custom audience for LinkedIn Ads targeting."
+	title="📥 Create LinkedIn Audience from CSV"
 	href="/api-reference/endpoint/linkedin/create_csv_audience"
-/>
+>
+	Upload a CSV file to create a custom audience for LinkedIn Ads targeting.
+</Card>
