--- a/api-reference/endpoint/meta/meta_overview.mdx
+++ b/api-reference/endpoint/meta/meta_overview.mdx
@@ -14,14 +14,6 @@ Use the following endpoints to interact with various audience sources:
 </Card>
 
 <Card
-	title="📋 Get Custom Audiences"
-	href="/api-reference/endpoint/meta/get_custom_audiences"
->
-	Retrieve a list of your existing custom audiences from your Facebook Ad
-	account. Use this to manage, audit, or reference your audiences.
-</Card>
-
-<Card
 	title="🎯 Create Lookalike Audience"
 	href="/api-reference/endpoint/meta/create_lookalike_audience"
 >
@@ -42,7 +34,21 @@ Use the following endpoints to interact with various audience sources:
 	href="/api-reference/endpoint/meta/create_page_audience"
 >
 	Create audiences from users who have engaged with your Facebook Page.
-	Leverage social engagement to build high-intent targeting groups.
+</Card>
+
+<Card
+	title="📋 Get Custom Audiences"
+	href="/api-reference/endpoint/meta/get_custom_audiences"
+>
+	Retrieve a list of your existing custom audiences from your Facebook Ad
+	account. Use this to manage, audit, or reference your audiences.
+</Card>
+
+<Card
+	title="📃 Get Leadforms"
+	href="/api-reference/endpoint/meta/get_leadforms"
+>
+	Retrieve a list of your existing leadforms.
 </Card>
 
 > 📘 Each route includes detailed request/response formats, parameters, and example use cases in its dedicated section.
