--- a/api-reference/endpoint/auth/create_user.mdx
+++ b/api-reference/endpoint/auth/create_user.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Create User Profile"
-api: "POST /auth/create_user"
+api: "POST /auth/create_profile"
 description: "This endpoint allows the creation of a new user profile on our platform. By providing the necessary user information, you can onboard new users into the system, enabling them to access and utilize platform features and services."
 ---
 
@@ -15,17 +15,21 @@ description: "This endpoint allows the creation of a new user profile on our pla
 
 ## Response
 
-<ResponseField name="success" type="boolean" required>
-	Indicates whether the API operation was successful
+<ResponseField name="success" type="boolean">
+	Indicates that the HTTP response was successful (status code 200 OK).
 </ResponseField>
 
-<ResponseField name="results" type="object" required>
+<ResponseField name="results" type="object">
 	<Expandable title="Results">
-		<ResponseField name="success" type="boolean" required>
-			Confirms successful processing within the results payload
+		<ResponseField name="success" type="boolean">
+			Indicates whether the specific operation or API action was
+			successful.
 		</ResponseField>
-		<ResponseField name="id" type="string" required>
-			Unique identifier hash
+		<ResponseField name="id" type="string">
+			Unique User id (you need to pass this id in all requests)
+		</ResponseField>
+		<ResponseField name="error" type="string">
+			Error message if something went wrong
 		</ResponseField>
 	</Expandable>
 </ResponseField>
