--- a/api-reference/endpoint/meta/create_page_audience.mdx
+++ b/api-reference/endpoint/meta/create_page_audience.mdx
@@ -7,43 +7,41 @@ description: "This endpoint allows you to create a custom audience based on user
 ## Request Body
 
 <ParamField body="userId" type="string" required>
-	User Id
+	User ID, If not already created, make a user on [create user
+	page](/api-reference/endpoint/auth/create_user) first. If already created,
+	retrieve the user ID from [get profile
+	page](/api-reference/endpoint/auth/get_profile).
 </ParamField>
 <ParamField body="name" type="string" required>
 	Page Audience Name
 </ParamField>
-<ParamField body="fbPageId" type="string" required>
-	Facebook Page Id
-</ParamField>
-<ParamField body="instagramId" type="string">
-	Instagram Id
-
-    <Note>
-     without this it will create only facebook page audience and including this will create only instagram page audience
-    </Note>
-
+<ParamField body="type" type="string">
+	Type = `FACEBOOK` or `INSTAGRAM`
 </ParamField>
 
 ## Response
 
-<ResponseField name="success" type="boolean" required>
-	Indicates whether the operation was successful
+<ResponseField name="success" type="boolean">
+	Indicates that the HTTP response was successful (status code 200 OK).
 </ResponseField>
 
-<ResponseField name="results" type="object" required>
+<ResponseField name="results" type="object" >
     <Expandable title="Results Object">
-        <ResponseField name="success" type="boolean" required>
-            Indicates whether the operation was successful
+        <ResponseField name="success" type="boolean" >
+			Indicates whether the specific operation or API action was successful.
         </ResponseField>
-        <ResponseField name="audience" type="object" required>
+        <ResponseField name="audience" type="object" >
             <Expandable title="Audience Object">
-                <ResponseField name="id" type="string" required>
-                    Unique identifier for page audience
+                <ResponseField name="id" type="string" >
+                    Unique identifier for page audience.
                 </ResponseField>
-                <ResponseField name="name" type="string" required>
+                <ResponseField name="name" type="string" >
                     Name of audience
                 </ResponseField>
             </Expandable>
+        </ResponseField>
+        <ResponseField name="error" type="string">
+            Error string if something went wrong
         </ResponseField>
     </Expandable>
 
