--- a/api-reference/endpoint/meta/meta_overview.mdx
+++ b/api-reference/endpoint/meta/meta_overview.mdx
@@ -6,7 +6,7 @@ description: "The Meta Ads Audience API provides a powerful set of endpoints for
 Use the following endpoints to interact with various audience sources:
 
 <Card
-	title="📥 Create Facebook Audience from CSV"
+	title="📊 Create Facebook Audience from CSV"
 	href="/api-reference/endpoint/meta/create_fb_csv_audience"
 >
 	Easily create custom audiences by uploading user data from a CSV file. Ideal
@@ -22,22 +22,22 @@ Use the following endpoints to interact with various audience sources:
 </Card>
 
 <Card
-	title="📝 Create Leadform Audience"
+	title="📋 Create Leadform Audience"
 	href="/api-reference/endpoint/meta/create_leadform_audience"
 >
-	Generate audiences from Facebook Lead Forms submissions. Engage users who’ve
+	Generate audiences from Facebook Lead Forms submissions. Engage users who've
 	shown interest in your products or services.
 </Card>
 
 <Card
-	title="👍 Create Page Audience"
+	title="👥 Create Page Audience"
 	href="/api-reference/endpoint/meta/create_page_audience"
 >
 	Create audiences from users who have engaged with your Facebook Page.
 </Card>
 
 <Card
-	title="📋 Get Custom Audiences"
+	title="📑 Get Custom Audiences"
 	href="/api-reference/endpoint/meta/get_custom_audiences"
 >
 	Retrieve a list of your existing custom audiences from your Facebook Ad
@@ -45,10 +45,114 @@ Use the following endpoints to interact with various audience sources:
 </Card>
 
 <Card
-	title="📃 Get Leadforms"
+	title="📝 Get Leadforms"
 	href="/api-reference/endpoint/meta/get_leadforms"
 >
 	Retrieve a list of your existing leadforms.
+</Card>
+
+<Card
+	title="🎯 Create Campaign"
+	href="/api-reference/endpoint/meta/create_campaign"
+>
+	Create a campaign to start targeting your audience.
+</Card>
+
+<Card
+	title="✅ Check Leadform TOS"
+	href="/api-reference/endpoint/meta/check_leadform_tos"
+>
+	Check if the user has accepted the Leadform Terms of Service.
+</Card>
+
+<Card
+	title="🖼️ Get Ad Account Media"
+	href="/api-reference/endpoint/meta/get_ad_account_media"
+>
+	Retrieves all media assets associated with a Meta ad account.
+</Card>
+
+<Card
+	title="📱 Get Facebook Page Media"
+	href="/api-reference/endpoint/meta/get_fb_page_media"
+>
+	Fetches all media content (images, videos, posts) from a specific Facebook
+	page.
+</Card>
+
+<Card
+	title="📸 Get Instagram Page Media"
+	href="/api-reference/endpoint/meta/get_ig_page_media"
+>
+	Retrieves all media content (photos, videos, stories) from a specific
+	Instagram business account.
+</Card>
+
+<Card
+	title="📊 Get Campaign Insights"
+	href="/api-reference/endpoint/meta/get_campaign_insights"
+>
+	Fetches detailed performance metrics and analytics for Meta advertising
+	campaigns.
+</Card>
+
+<Card title="🎥 Upload Video" href="/api-reference/endpoint/meta/upload_video">
+	Uploads video content to Meta's servers for use in advertisements.
+</Card>
+
+<Card
+	title="ℹ️ Get Video Info"
+	href="/api-reference/endpoint/meta/get_video_info"
+>
+	Retrieves detailed information about a specific video asset, including
+	status, dimensions, and usage.
+</Card>
+
+<Card
+	title="📄 Get Page Posts"
+	href="/api-reference/endpoint/meta/get_page_posts"
+>
+	Fetches all posts from a Facebook page, including their content, dimensions,
+	and media attachments.
+</Card>
+
+<Card
+	title="📊 Get Pixels List"
+	href="/api-reference/endpoint/meta/get_pixels_list"
+>
+	Retrieves a list of all Meta Pixel IDs associated with your ad account for
+	tracking and conversion measurement.
+</Card>
+
+<Card
+	title="🔄 Update Campaign Status"
+	href="/api-reference/endpoint/meta/update_campaign_status"
+>
+	Updates the active status of Meta advertising campaigns (pause, resume, or
+	delete).
+</Card>
+
+<Card
+	title="🎯 Get Targeting Interests"
+	href="/api-reference/endpoint/meta/search_targeting_interests"
+>
+	Retrieves a list of available interest-based targeting options for Meta ad
+	campaigns.
+</Card>
+
+<Card
+	title="🌍 Get Targeting Locations"
+	href="/api-reference/endpoint/meta/search_targeting_locations"
+>
+	Fetches available geographic targeting options for Meta ad campaigns.
+</Card>
+
+<Card
+	title="📋 Create Leadform"
+	href="/api-reference/endpoint/meta/create_leadform"
+>
+	Creates a new lead generation form for collecting user information through
+	Meta ads.
 </Card>
 
 > 📘 Each route includes detailed request/response formats, parameters, and example use cases in its dedicated section.
