--- a/api-reference/endpoint/linkedin/linkedin_overview.mdx
+++ b/api-reference/endpoint/linkedin/linkedin_overview.mdx
@@ -18,3 +18,22 @@ Use the card below to explore the endpoint:
 >
 	Upload a CSV file to create a custom audience for LinkedIn Ads targeting.
 </Card>
+
+<Card
+	title="🔗 Link CSV Audience"
+	href="/api-reference/endpoint/linkedin/link_csv_audience"
+>
+	Link a CSV file to an existing audience.
+</Card>
+
+<Card
+	title="📃 Get LinkedIn Audience List"
+	href="/api-reference/endpoint/linkedin/get_audiences_list"
+>
+	Get a list of all LinkedIn audiences.
+</Card>
+
+# How to create a LinkedIn audience from a CSV file
+
+1. Create a LinkedIn audience from the CSV file using the [Create LinkedIn Audience from CSV](/api-reference/endpoint/linkedin/create_csv_audience) endpoint. This endpoint will return a csvFileId which will be used in the next step.
+2. Link the CSV file using the [Link CSV Audience](/api-reference/endpoint/linkedin/link_csv_audience) endpoint using the csvFileId from the previous step. This endpoint will return a audienceId.
