--- a/api-reference/endpoint/meta/meta_overview.mdx
+++ b/api-reference/endpoint/meta/meta_overview.mdx
@@ -5,6 +5,8 @@ description: "The Meta Ads Audience API provides a powerful set of endpoints for
 
 Use the following endpoints to interact with various audience sources:
 
+### Audience Endpoints
+
 <Card
 	title="📊 Create Facebook Audience from CSV"
 	href="/api-reference/endpoint/meta/create_fb_csv_audience"
@@ -44,6 +46,15 @@ Use the following endpoints to interact with various audience sources:
 	account. Use this to manage, audit, or reference your audiences.
 </Card>
 
+### Lead Form Endpoints
+
+<Card
+	title="✅ Check Leadform TOS"
+	href="/api-reference/endpoint/meta/check_leadform_tos"
+>
+	Check if the user has accepted the Leadform Terms of Service.
+</Card>
+
 <Card
 	title="📝 Get Leadforms"
 	href="/api-reference/endpoint/meta/get_leadforms"
@@ -52,18 +63,14 @@ Use the following endpoints to interact with various audience sources:
 </Card>
 
 <Card
-	title="🎯 Create Campaign"
-	href="/api-reference/endpoint/meta/create_campaign"
+	title="📋 Create Leadform"
+	href="/api-reference/endpoint/meta/create_leadform"
 >
-	Create a campaign to start targeting your audience.
+	Creates a new lead generation form for collecting user information through
+	Meta ads.
 </Card>
 
-<Card
-	title="✅ Check Leadform TOS"
-	href="/api-reference/endpoint/meta/check_leadform_tos"
->
-	Check if the user has accepted the Leadform Terms of Service.
-</Card>
+### Media Endpoints
 
 <Card
 	title="🖼️ Get Ad Account Media"
@@ -88,14 +95,6 @@ Use the following endpoints to interact with various audience sources:
 	Instagram business account.
 </Card>
 
-<Card
-	title="📊 Get Campaign Insights"
-	href="/api-reference/endpoint/meta/get_campaign_insights"
->
-	Fetches detailed performance metrics and analytics for Meta advertising
-	campaigns.
-</Card>
-
 <Card title="🎥 Upload Video" href="/api-reference/endpoint/meta/upload_video">
 	Uploads video content to Meta's servers for use in advertisements.
 </Card>
@@ -116,21 +115,7 @@ Use the following endpoints to interact with various audience sources:
 	and media attachments.
 </Card>
 
-<Card
-	title="📊 Get Pixels List"
-	href="/api-reference/endpoint/meta/get_pixels_list"
->
-	Retrieves a list of all Meta Pixel IDs associated with your ad account for
-	tracking and conversion measurement.
-</Card>
-
-<Card
-	title="🔄 Update Campaign Status"
-	href="/api-reference/endpoint/meta/update_campaign_status"
->
-	Updates the active status of Meta advertising campaigns (pause, resume, or
-	delete).
-</Card>
+### Targeting Endpoints
 
 <Card
 	title="🎯 Get Targeting Interests"
@@ -148,11 +133,36 @@ Use the following endpoints to interact with various audience sources:
 </Card>
 
 <Card
-	title="📋 Create Leadform"
-	href="/api-reference/endpoint/meta/create_leadform"
+	title="📊 Get Pixels List"
+	href="/api-reference/endpoint/meta/get_pixels_list"
 >
-	Creates a new lead generation form for collecting user information through
-	Meta ads.
+	Retrieves a list of all Meta Pixel IDs associated with your ad account for
+	tracking and conversion measurement.
+</Card>
+
+### Campaign Endpoints
+
+<Card
+	title="🎯 Create Campaign"
+	href="/api-reference/endpoint/meta/create_campaign"
+>
+	Create a campaign to start targeting your audience.
+</Card>
+
+<Card
+	title="📊 Get Campaign Insights"
+	href="/api-reference/endpoint/meta/get_campaign_insights"
+>
+	Fetches detailed performance metrics and analytics for Meta advertising
+	campaigns.
+</Card>
+
+<Card
+	title="🔄 Update Campaign Status"
+	href="/api-reference/endpoint/meta/update_campaign_status"
+>
+	Updates the active status of Meta advertising campaigns (pause, resume, or
+	delete).
 </Card>
 
 > 📘 Each route includes detailed request/response formats, parameters, and example use cases in its dedicated section.
